// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorState Component renders with default props 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    <svg
      color="currentColor"
      fill="currentColor"
      height="24"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: currentColor;"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM165.66,154.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`ErrorState Component renders with message 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    <svg
      color="currentColor"
      fill="currentColor"
      height="24"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: currentColor;"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM165.66,154.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
      />
    </svg>
    <div
      class="mia-platform-typography bodyS"
      role="paragraph"
    >
      Error occurred
    </div>
  </div>
</DocumentFragment>
`;
